# Change log

## [1.2.4]

### Changed
- Remove UIX and Change to CMB2.

## [[1.2.3]](https://github.com/lightspeeddevelopment/lsx-team/releases/tag/1.2.3) - 2020-03-30

### Added
- Adding support for the WordPress REST API.

### Fixed
- Fixed issue `PHP Deprecated: dbx_post_advanced is deprecated since version 3.7.0! Use add_meta_boxes instead`.

### Security
- Updating dependencies to prevent vulnerabilities.
- General testing to ensure compatibility with latest WordPress version (5.4).
- General testing to ensure compatibility with latest LSX Theme version (2.7).


## [[1.2.2]](https://github.com/lightspeeddevelopment/lsx-team/releases/tag/1.2.2) - 2019-12-19

### Added
- Limiting the Testimonials and Projects tabs, they will only appear if the plugins are active.

### Security
- General testing to ensure compatibility with latest WordPress version (5.3).
- Checking compatibility with LSX 2.6 release.

## [[1.2.1]](https://github.com/lightspeeddevelopment/lsx-team/releases/tag/1.2.1) - 2019-11-13

### Security
- Checking LSX 2.6 compatibility.


## [[1.2.0]](https://github.com/lightspeeddevelopment/lsx-team/releases/tag/1.2.0) - 2019-10-01

### Added
- Adding the .gitattributes file to remove unnecessary files from the WordPress version.
- Added in lazyloading for the sliders
- Added in a "Person" Schema using the Yoast API.


## [[1.1.2]](https://github.com/lightspeeddevelopment/lsx-team/releases/tag/v1.1.2) - 2019-04-09

### Added
- Removed the deprecated "create_function".
- Adding rel tags to the team single social media.

### Fixed
- Removing the return false statements stopping the widget from displaying.
- Fixed Array Issue - array_key_exists().
- Fixed travis WPCS errors and NPM security vulnerabilities.
- service tab only will appear if plugin is active.


## [[1.1.1]]()

### Added
- Added compatibility with LSX Videos.
- Added compatibility with LSX Search.
- Improved single tabs section visual (spacing).
- Improved single social icons visual (spacing).